app8ThreatsAndIncidents/microservice5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app8-microservice5
spec:
  selector:
    app: app8-microservice5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8074
  type: ClusterIP
